--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="header_content">
      <h1 class="title">
-       Air Pos S M AX
+       Air Pod S M AX
      </h1>
       <div class="header_content-images">
         <img src="images/" alt="">
