--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
        Air Pod S M AX
      </h1>
       <div class="header_content-images">
-        <img src="images/" alt="">
-        <img src="images/" alt="">
-        <img src="images/" alt="">
-        <img src="images/" alt="">
-        <img src="images/" alt="">
+        <img src="images/airpods-black.png" alt="">
+        <img src="images/airpods-blue.png" alt="">
+        <img src="images/airpods-green.png" alt="">
+        <img src="images/airpods-red.png" alt="">
+        <img src="images/airpods-white.png" alt="">
       </div>
     </div>
   </div>
