--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     </div>
     <div class="header_content">
      <h1 class="title">
-       Air Pod S M AX
+       <span class="title--AIR">Air</span><span class="title--pod">Pod</span><span class="title--s">S</span><span class="title--M">M</span><span class="title--ax">AX</span>
      </h1>
       <div class="header_content-images">
-        <img src="images/airpods-black.png" alt="">
+        <!-- <img src="images/airpods-black.png" alt=""> -->
         <img src="images/airpods-blue.png" alt="">
-        <img src="images/airpods-green.png" alt="">
-        <img src="images/airpods-red.png" alt="">
-        <img src="images/airpods-white.png" alt="">
+        <!-- <img src="images/airpods-green.png" alt=""> -->
+        <!-- <img src="images/airpods-red.png" alt=""> -->
+        <!-- <img src="images/airpods-white.png" alt=""> -->
       </div>
     </div>
   </div>
