fix: удалил текст

--- a/index.html
+++ b/index.html
@@ -49,8 +49,14 @@
       </div>
     </div>
   </div>
-</header>goit
-
+</header>
+ <main class="main">
+  <section class="choose-color"></section>
+    <div class="container">
+    <h3 class="choose-color__title"></h3>
+    <p class="choose-color__text"></p>
+  </div>
+ </main>
   <script src="js/main.js"></script>
 </body>
 </html>
