--- a/index.html
+++ b/index.html
@@ -53,8 +53,32 @@
  <main class="main">
   <section class="choose-color"></section>
     <div class="container">
-    <h3 class="choose-color__title"></h3>
-    <p class="choose-color__text"></p>
+      <h3 class="choose-color__title">
+        Choose your colour
+      </h3>
+
+      <p class="choose-color__text">
+        The perfect balance between the purityof hi‑fi and the magic of AirPods.
+        The ultimate personal audio experience.
+      </p>
+      <div class="choose-color__list">
+       <button class="choose__color-btn">
+        <img src="images/button-blue.png" alt="">
+       </button>
+       <button class="choose__color-btn">
+          <img src="images/button-black.png" alt="">
+       </button>
+       <button class="choose__color-btn">
+         <img src="images/button-red.png" alt="">
+       </button>
+       <button class="choose__color-btn">
+         <img src="images/button-green.png" alt="">
+       </button>
+       <button class="choose__color-btn">
+         <img src="images/button-white.png" alt="">
+       </button>
+       
+      </div>
   </div>
  </main>
   <script src="js/main.js"></script>
