--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 </header>
  <main class="main">
-  <section class="choose-color"></section>
+  <section class="choose-color">
     <div class="container">
       <h3 class="choose-color__title">
         Choose your colour
@@ -78,8 +78,32 @@
          <img src="images/button-white.png" alt="">
        </button>
        
+
+       
       </div>
   </div>
+  </section>
+  <section class="composition">
+    <div class="container">
+      <h2 class="composition__title main__title">
+        An extremely original composition.
+      </h2>
+      <p class="composition__text">
+        Introducing the reinvention of over-the-ear headphones.
+        From the cushion to the headband, the AirPods Max are designed 
+        with acoustic insulation in mind, adapted to many head shapes, 
+        so you can immerse yourself in the purity of sound.
+      </p>
+       <div class="composition__inner">
+        <div class="composition__inner-text">
+          <p></p>
+          <p></p>
+          <p></p>
+        </div>
+       </div>
+    </div>
+  </section>
+ 
  </main>
   <script src="js/main.js"></script>
 </body>
